dnl Process this file with autoconf to produce a configure script.
AC_INIT(axlib.h)
AXLIB_MAJOR_VERSION=0
AXLIB_MINOR_VERSION=0
AXLIB_MICRO_VERSION=6
AXLIB_VERSION=$AXLIB_MAJOR_VERSION.$AXLIB_MINOR_VERSION.$AXLIB_MICRO_VERSION

# for automake
VERSION=$AXLIB_VERSION
PACKAGE=libax25

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB
AM_PROG_LIBTOOL

dnl Checks for libraries.

AC_FUNC_SETPGRP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(socket strdup strerror strspn)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/file.h sys/ioctl.h unistd.h zlib.h)
AC_CHECK_HEADERS(netax25/ax25.h netrom/netrom.h netrose/rose.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Only use -Wall if we have gcc
if test "x$GCC" = "xyes"; then
  if test -z "`echo "$CFLAGS" | grep "\-Wall" 2> /dev/null`" ; then
    CFLAGS="$CFLAGS -Wall"
  fi
fi

dnl Checks for library functions.
AC_OUTPUT(Makefile)
